--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,14 @@ script: "bundle exec rspec spec"
 env:
   - CI=true
 rvm:
-  - 2.2.5
-  - 2.3.1
-  - jruby-9.1.2.0
+  - 2.2.6
+  - 2.3.3
+  - 2.4.0
+  - jruby
   - rbx
 cache: bundler
 sudo: false
 matrix:
   allow_failures:
+    - rvm: jruby
     - rvm: rbx
