--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,14 @@ rvm:
   - 2.5
   - 2.6
   - 2.7
+  - ruby-head
   - jruby
   - rbx
 cache: bundler
 sudo: false
 matrix:
   allow_failures:
+    - rvm: ruby-head
     - rvm: jruby
     - rvm: rbx
 dist: trusty
